syntax = "proto3";

service IdentityProto{
  rpc GetClosestShelter (GetClosestShelterRequest) returns (GetClosestShelterReply);
  rpc IsUserOwnerOfShelter (IsUserOwnerOfShelterRequest) returns (IsUserOwnerOfShelterReply);
  rpc DoesShelterExists (DoesShelterExistsRequest) returns (DoesShelterExistsReply);
}

message GetClosestShelterRequest{
  string longitude = 1;
  string latitude = 2;
}

message IsUserOwnerOfShelterRequest{
  string userId = 1;
  string shelterId = 2;
}

message DoesShelterExistsRequest{
  string shelterId = 1;
}

message GetClosestShelterReply{
  string shelterId = 1;
}

message IsUserOwnerOfShelterReply{
  bool isOwner = 1;
}

message DoesShelterExistsReply{
  bool doesExists = 1;
}